# github-microrepos-cli

./: .mypy.ini  .pre-commit-config.yaml  Justfile  README.md  cz.toml  github_microrepos_cli.py  pyproject.toml  tox.ini
.github/workflows/: create-tag.yaml  quality-gate.yaml
tests/: test_packaging_attribute.py
