[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "github-microrepos-cli"
authors = [{name = "Clément Dubos", email = "contact@cdubos.fr"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "GitPython",
    "PyGithub",
    "pre-commit",
    "virtualenv",
    "tox",
    "click",
]

[project.optional-dependencies]
dev = [
    "add-trailing-comma",
    "autopep8",
    "bandit",
    "flake8",
    "ipython",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-lazy-fixture",
    "pyupgrade",
    "reorder-python-imports",
    "tox",
    "xenon",
]

[tool.flit.module]
name = "github_microrepos_cli"
